# blog-sys-cicd

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: checks.yml  ci.yml  deploying.yml  images.yml
backend/: .dockerignore  atlas.hcl  pyproject.toml
backend/src/: __init__.py  connection.py  dtos.py  load_models.py  main.py  models.py  security.py  shared.py
backend/src/routers/: blogs.py  users.py
backend/test/: test_main.py
frontend/: .dockerignore  .nvmrc  .prettierrc  components.json  eslint.config.js  package-lock.json  package.json  react-router.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: entry.client.tsx  index.css  root.tsx  routes.tsx  vite-env.d.ts
frontend/src/hooks/: useJwt.tsx
frontend/src/pages/: _index.tsx  blogs.$title.tsx  blogs.create.tsx  blogs.rewrite.$title.tsx  blogs.tsx  demo.tsx  demo2.tsx  login.tsx  register.tsx  tanstack.tsx  user.$username.tsx
frontend/src/shared/: api-types.ts  formProcessing.ts  security-utils.ts  user-info-exception-handler.tsx
infra/: backend.Dockerfile  compose.yml  fronted.Dockerfile  frontend.Dockerfile  nginx.conf
infra/aws/: auth-worker-nodes.yaml  main.sh  main.tf  max-pods-calculator.sh  pen-id-connect-providers  providers.tf
infra/aws/eks/: inputs.tf  main.tf  output.tf
infra/aws/k8s/: inputs.tf  main.tf
infra/deployments/: aws-strage-class.yaml  gh-secret.yaml  ingress.yaml  install-ingress-controller.sh  namespace.yaml
infra/deployments/argo/: app.yaml  application.yaml  proxy.yaml
infra/deployments/be/: app.yaml  secrets.yaml  service.yaml
(+35 files in other folders)
